--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-checkbox": "^1.0.3",
-    "@radix-ui/react-icons": "^1.3.0",
     "install": "^0.13.0",
     "npm": "^9.6.6",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
